--- a/web/src/style.sass
+++ b/web/src/style.sass
@@ -34,22 +34,23 @@ nav
 	margin: $default-spacing
 	padding: $default-spacing
 	background: $secondary-background-color
-	.button
+
+	div
 		margin: auto
 		font-weight: 700
+		user-select: none
+		text-align: center
+		background: $secondary-background-color
+		padding: $default-spacing 2*$default-spacing
+		&:hover
+			background: darken($secondary-background-color, 5%)
+			cursor: pointer
+		&:active
+			background: darken($secondary-background-color, 40%)
 
 main
+	display: flex
+	flex-wrap: wrap
 	background: $secondary-background-color
 	margin: 2*$default-spacing $default-spacing
 	padding: $default-spacing
-
-.button
-	user-select: none
-	text-align: center
-	background: $secondary-background-color
-	padding: $default-spacing 2*$default-spacing
-	&:hover
-		background: darken($secondary-background-color, 5%)
-		cursor: pointer
-	&:active
-		background: darken($secondary-background-color, 40%)
